2016-10-02 master
- Fixes:
  - tint2conf: executor tooltips are now correctly disabled when text config value is empty (contributed by Justin Jacobs)
- Enhancements:
  - Desktop files (shortcuts) used in launcher are reloaded on click, in case the file has changed
  - New config option taskbar_hide_if_empty to hide an empty taskbar in multi_desktop mode (contributed by Benoit Averty)
- New plugin: separator (contributed by Oskari Rauta)

2016-08-02 0.12.12
- Fixes:
  - Set task maximum height equal to width if not specified, instead of hardcoding 30 (issue #583; thanks @VastOne)
  - tint2conf
    - Process background selection events correctly (issue #582)
	- Menus accessible with keyboard shortcuts (issue #590)
- Enhancements:
  - Borders can now be drawn on only some sides; configurable with the option border_sides (issue #580; thanks @stophe)
  - Updated man page
  - The geometry of panel items is printed to stderr if the environment variable DEBUG_GEOMETRY is set

2016-05-14 0.12.11
- Fixes:
  - tint2conf:
    - Fixed crash in tint2conf when adding background
    - Add correct extension to file name in tint2conf for 'Save as'
    - Changed main window title in tint2conf

2016-05-07 0.12.10
- Fixes:
  - Fixed crash in systray with non-Latin languagess (thanks zcodes)
  - Invalidate cached pixmaps on resize/move (issue #576)
  - Battery: do not show negative durations when the sensors return garbage
  - Proper workaround for issue #555

2016-04-02 0.12.9
- Fixes:
  - Regression: Do not detect empty areas as clickable (issue #572)
  - Regression: Position and resize task icon correctly (issue #575)
  - Use imlib2 for taking screenshot; if it fails, use Xlib (issue #574)
  - Battery: lower sample frequency when there is no support for reading current/power

2016-03-25 0.12.8
- Major changes (see details below):
  - Icon cache and lazy icon theme loading to improve performance in tint2 and tint2conf